fixed centering issues on smaller mobile devices

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -89,7 +89,7 @@
 
 
 .gl-page-header-text-mobile {
-    font-size: 3rem;
+    font-size: 2.5rem;
     color: #a5252d;
 }
 
